criação do card

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,30 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      Primer
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
+<ion-content [fullscreen]="true" class="content">
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">Blank</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  <div class="content">
+    <ion-card>
+      <img alt="Silhouette of mountains" src="https://s1.static.brasilescola.uol.com.br/be/conteudo/images/as-montanhas-diferenciam-se-pela-altitude-mais-elevada-em-relacao-as-outras-formas-relevo-5926cccf2e122.jpg" />
+      <ion-card-header>
+        <ion-card-title>Lucas Sousa da Silva</ion-card-title>
+        <ion-card-subtitle>22105488</ion-card-subtitle>
+      </ion-card-header>
+    
+      <ion-card-content>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis placeat in dolore nesciunt eveniet sapiente!
+      </ion-card-content>
+    </ion-card>
+  
+  </div>  
 </ion-content>
