--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -18,7 +18,7 @@
       <img alt="Silhouette of mountains" src="https://s1.static.brasilescola.uol.com.br/be/conteudo/images/as-montanhas-diferenciam-se-pela-altitude-mais-elevada-em-relacao-as-outras-formas-relevo-5926cccf2e122.jpg" />
       <ion-card-header>
         <ion-card-title>Lucas Sousa da Silva</ion-card-title>
-        <ion-card-subtitle>22105488</ion-card-subtitle>
+        <ion-card-subtitle>[PAS23103|BS|M|ADS0301M]</ion-card-subtitle>
       </ion-card-header>
     
       <ion-card-content>
